--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.10",
     "@mui/x-data-grid": "^6.15.0",
+    "@mui/x-tree-view": "^6.0.0-beta.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
